# slam_project

./: .gitignore  CMakeLists.txt  package.xml
config/: config.yaml
data/: newRobot2_Groundtruth.txt  newRobot2_Measurement.txt  newRobot2_Odometry.txt  newRobot3_Groundtruth.txt  newRobot3_Measurement.txt  newRobot3_Odometry.txt  newRobot4_Groundtruth.txt  newRobot4_Measurement.txt  newRobot4_Odometry.txt  newRobot5_Groundtruth.txt  newRobot5_Measurement.txt  newRobot5_Odometry.txt
include/: data_reader.h  dec_multi_fast_slam.h  fast_slam.h  fast_slam2.h  multi_fast_slam.h  multi_fast_slam2.h  particle.h
include/map_models/: feature_map_2dmodel.h  interface_map_model.h
include/measurement_models/: feature_measurement_model.h  interface_measurement_model.h
include/motion_models/: interface_motion_model.h  velocity_motion_model.h
include/robot_models/: interface_robot_model.h  mobile_robot_2dmodel.h
include/utils/: eigenmvn.h  gaussian.h  random_utils.h
launch/: multi_slam.launch  multi_slam.rviz  single_slam.launch  slam.launch  slam.rviz  slam_path.rviz
msg/: Robot_GroundTruth.msg  Robot_GroundTruth_Multi.msg  Robot_Measure.msg  Robot_Odometry.msg  Robot_Odometry_Single.msg  Robot_Path_Map.msg
results/: landmarks_error.txt  robots_error.txt
src/: basic_shapes.cpp  data_reader.cpp  data_reader.h  data_receive.cpp  dec_multi_fast_slam.cpp  draw.cpp  draw2.cpp  fast_slam.cpp  fast_slam2.cpp  multi_fast_slam.cpp  multi_fast_slam2.cpp  newRobot1_Groundtruth.txt  newRobot1_Measurement.txt  newRobot1_Odometry.txt  points_and_lines.cpp  points_and_lines_copy2.cpp  slam_runner.cpp  test_draw.cpp
src/map_models/: feature_map_2dmodel.cpp
src/measurement_models/: feature_measurement_model.cpp
src/motion_models/: velocity_motion_model.cpp
src/robot_models/: interface_robot_model.cpp  mobile_robot_2dmodel.cpp
srv/: requestBarcode.srv
